<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/noteWholeView"
    android:background="@drawable/floatingmainbg">
    <RelativeLayout
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_title_bar">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:id="@+id/iv_back"
            android:background="@null"
            android:src="@drawable/btn_tofloatingwindowmain"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="9dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:textSize="15sp"
            android:id="@+id/note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:shadowColor="#ff000000"
            android:shadowDx="0.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:textColor="#ffffffff"
            android:text="@string/note_window_title"/>
        <ImageButton
            android:background="@null"
            android:layout_marginTop="9dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_tofloatingbutton"
            android:layout_alignParentTop="true"
            android:id="@+id/iv_minimize"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/rl_title_bar"
        android:id="@+id/rl_content_bar">
        <RelativeLayout
            android:id="@+id/layout_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/notes_pop_edit_content_bg">
            <TextView
                android:textSize="10sp"
                android:textColor="#ffb2440c"
                android:id="@+id/date_time"
                android:paddingRight="5dp"
                android:layout_marginTop="2dp"
                android:shadowRadius="1.0"
                android:shadowDy="1.0"
                android:shadowDx="0.0"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:textColor="#ffb2440c"
                android:gravity="top"
                android:id="@+id/notes_content"
                android:background="@null"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="4dp"
                android:focusable="true"
                android:scrollbars="vertical"
                android:layout_marginTop="5dp"
                android:layout_below="@id/date_time"
                android:layout_alignParentLeft="true"
                android:lineSpacingMultiplier="1.2"
                android:textCursorDrawable="@drawable/popwindow_cursor"/>
        </RelativeLayout>
        <Gallery
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gallery"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:unselectedAlpha="0.6"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_empty"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/rl_title_bar">
        <TextView
            android:textSize="14sp"
            android:textColor="#ffffffff"
            android:gravity="center"
            android:id="@+id/empty_note"
            android:text="@string/no_note"
            android:textCursorDrawable="@null"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/notes_pop_layout2"
        android:visibility="gone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/rl_content_bar">
        <ImageView
            android:background="@drawable/parting_line_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="3dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"/>
        <Button
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:id="@+id/cancel_btn"
            android:textColor="#ffffffff"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="5dp"
            android:text="@string/edit_note_cancel"
            android:layout_alignParentLeft="true"
            android:background="@drawable/notes_pop_cancel_btn" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:background="@drawable/parting_line_v"
            android:layout_marginTop="4dp"
            android:layout_centerHorizontal="true"/>
        <Button
            android:id="@+id/save_btn"
            android:textSize="12sp"
            android:textColor="#ffffffff"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:background="@drawable/notes_pop_save_btn"
            android:layout_marginTop="4dp"
            android:layout_marginRight="3dp"
            android:text="@string/edit_note_save"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_content_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/rl_bottom_bar">
        <ImageButton
            android:id="@+id/del_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/notes_delete"
            android:layout_marginLeft="27dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"/>
        <ImageButton
            android:id="@+id/new_btn"
            android:background="@null"
            android:layout_marginRight="27dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/notes_pop_new"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</RelativeLayout>
    <TextView
        android:id="@+id/null_tv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
</RelativeLayout>